Update popen3.c, popen3.h, CMakeLists.txt, and 3 more files

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,8 @@
 
 add_executable(popen3_test
     cases/echo.c
+    cases/envp_empty.c
+    cases/envp_inherit.c
     tools/__init__.c
     tools/echo.c
     tools/envp.c
